# weighted_rank_correlation

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  scaled_gamma.py
gamma_correlation/: __init__.py  distances.py  main.py  norms.py  scaled_gamma.py  tnorms.py  util.py  weights.py  weights_slice_aggregators.py
tests/: test_scaled_gamma.py
